[package]
name = "evil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_RemoteDesktop"
]

[lib]
crate-type = ["cdylib"]
